--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
           </div>
           <span class="badge text-bg-primary rounded-pill">10</span>
         </li>
+        <li
+          class="list-group-item d-flex justify-content-between align-items-start"
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Miguel Angel Castro Sanchez </div>
+            github me llama mucho la atención, muy útil. 
+          </div>
+          <span class="badge text-bg-primary rounded-pill">10</span>
+        </li>
       </ol>
     </div>
   </body>
